# KV_compression_genetic

./: README.md
combined_models/: llama_combined.py  qwen2_combined.py  qwen3_combined.py
kivi_models/: llama_kivi.py  qwen2_kivi.py  qwen3_kivi.py
kivi_models/quant/: new_pack.py  setup.py
kivi_models/quant/csrc/: gemv_cuda.cu
kivi_models/quant/src/quant/: pyproject.toml
metaoptimization/: kv_genetic.py
qjl_models/: llama3_qjl.py  qwen2_qjl.py  qwen3_qjl.py  utils_qjl.py
qjl_models/qjl_kernel/: matmul.py  new_pack.py  qjl_kernel.py
qjl_models/qjl_kernel/csrc/: qjl_gqa_score_kernel.cu  qjl_quant_kernel.cu  qjl_quant_values_kernel.cu  qjl_score_kernel.cu
svd_models/: llama3_svd.py  qwen2_svd.py  qwen3_svd.py
vector_models/: llama_vector_quantized.py  qwen2_vector_quantized.py  qwen3_vector_quantized.py
