[project]
name = "quant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "linguistics", email = "iavalyaev@avito.ru" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
